tests/ui/not_found.stderr
error[E0425]: cannot find value `x` in this scope
 --> tests/ui/not_found.rs:4:20
  |
4 |     plist!({ "a" : x });
  |                    ^ not found in this scope
