tests/ui/not_found.rs
use plist::plist;

fn main() {
    plist!({ "a" : x });
}
